@@ -1,3 +1,7 @@
+2016-04-03 belangeo <belangeo@gmail.com>
+
+    *  Added new object: Exp, calculates the value of e to the power of x.
+
 2016-04-02 belangeo <belangeo@gmail.com>
 
     *  Revision, clean-up and optimization of various filters in the library.
